# spatial_index_benchmark

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  benchmark_boost_geometry.cpp  benchmark_spatialindex.cpp  configure.bat  configure.sh  results.txt  run_benchmark.bat  run_benchmark.sh  spatial_index_benchmark.hpp
cmake/modules/: FindSpatialIndex.cmake
results/mloskot/: README.md  plot_results.plt
